# xmms2hs

./: .gitignore  .hgignore
client/: Makefile.in  configure  configure.ac  xmms2-client.buildinfo.in  xmms2-client.cabal
client-glib/: C2HS.hs  Makefile.in  Setup.hs  configure  configure.ac  xmms2-client-glib.buildinfo.in  xmms2-client-glib.cabal
client-glib/src/XMMS2/Client/: Glib.chs
client-glib/tests/: Test1.hs
client/src/: Makefile.in
client/src/Control/Monad/: Exception.hs  ToIO.hs
client/src/XMMS2/: Client.hs  Utils.hs
client/src/XMMS2/Client/: Bindings.chs  Bindings.hs  Coll.chs  Coll.hs  CollBase.chs  Connection.chs  Connection.hs  Exception.hs  Medialib.chs  Medialib.hs  Monad.hs  Playback.chs  Playback.hs  Playlist.chs  Playlist.hs  Result.chs  Result.hs  Stats.chs  Stats.hs  Types.hs  Value.chs  Value.hs  ValueBase.chs  xmms2hs-client.c  xmms2hs-client.h
client/src/XMMS2/Client/Bindings/: Coll.chs  Connection.chs  Medialib.chs  Playback.chs  Playlist.chs  Result.chs  Stats.chs  Types.hs
client/src/XMMS2/Client/Bindings/Types/: Bin.chs  Coll.chs  Dict.chs  List.chs  Value.chs
client/src/XMMS2/Client/Monad/: Coll.hs  Connection.hs  Medialib.hs  Monad.hs  Playback.hs  Playlist.hs  Result.hs  Stats.hs  Utils.hs  Value.hs  XMMS.hs
client/src/XMMS2/Client/Types/: Bin.hs  Coll.hs  Data.hs  Dict.hs  List.hs  Property.hs  Value.hs
client/src/c/: xmms2hs-client.h
client/tests/: Test1.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs
