name:               xmms2-client-glib
version:            0.0.1.0
cabal-version:      >= 1.2
license:            OtherLicense
license-file:       COPYING
author:             Oleg Belozeorov
synopsis:           XMMS2 client development library - GLib integration
build-type:         Simple
extra-tmp-files:    config.status, config.log,
                    xmms2-client-glib.buildinfo, C2HS.hs
  
library
  exposed-modules:		XMMS2.Client.Glib
  other-modules:		C2HS
  build-depends:		base, haskell98, xmms2-client == 0.0.1.0
  build-tools:			c2hs
  hs-source-dirs:       ., src
  extensions:           ForeignFunctionInterface
