name:               xmms2-client
version:            0.0.1.0
cabal-version:      >= 1.2
license:            OtherLicense
license-file:       COPYING
author:             Oleg Belozeorov
synopsis:           XMMS2 client development library
build-type:         Simple
extra-source-files: src/XMMS2/Client/xmms2hs-client.h
extra-tmp-files:    config.status, config.log,
                    xmms2-client.buildinfo, C2HS.hs
  
library
  exposed-modules:		XMMS2.Client.Value, XMMS2.Client.Result,
                        XMMS2.Client.Connection, XMMS2.Client.Playback,
                        XMMS2.Client.Playlist, XMMS2.Client.Medialib,
                        XMMS2.Client.Monad, 
                        XMMS2.Client.Monad.Monad,
                        XMMS2.Client.Monad.Value,
                        XMMS2.Client.Monad.Result,
                        XMMS2.Client.Monad.Connection, 
                        XMMS2.Client.Monad.Playlist,
                        XMMS2.Client.Monad.Playback,
                        XMMS2.Client.Monad.Medialib
  other-modules:		C2HS, XMMS2.Utils
  c-sources:			src/XMMS2/Client/xmms2hs-client.c
  include-dirs:			src/XMMS2/Client
  build-depends:		base, haskell98, utf8-string, mtl
  build-tools:			c2hs
  hs-source-dirs:       ., src
  extensions:           ForeignFunctionInterface,
                        ExistentialQuantification,
                        TypeSynonymInstances
